[tool.poetry]
name = 'octobrowser'
version = '0.1.0.alpha1.dev1'
description = 'The package for interacting with API of anti-detect browser Octobrowser.'
authors = ['Alexey  <axbelenkov@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/octobrowser'
homepage = 'https://github.com/blnkoff/octobrowser'
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'octobrowser' }]

[tool.poetry.dependencies]
python = '^3.11'

[tool.poetry.group.dev.dependencies]
croco-cli = '^0.3.1'
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
build = "^1.2.1"
twine = "^5.1.1"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
